kubernetes/control.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control
  labels:
    app: control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control
  template:
    metadata:
      labels:
        app: control
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "17001"

        ad.datadoghq.com/control.check_names: |
          ["openmetrics"]
        ad.datadoghq.com/control.init_configs: |
          [{}]
        ad.datadoghq.com/control.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:17001/metrics",
              "namespace": "control",
              "metrics": [
                {"go_goroutines":"goroutines"},
                {"go_memstats_heap_sys_bytes":"heap_size"},
                {"control_total_messages":"total.messages"},
                {"control_total_bytes":"total.bytes"}
              ]
            }
          ]

    spec:
      imagePullSecrets:
      - name: hashicorp-horizon-pull-secret

      containers:
      - name: control
        image: quay.io/hashicorp/horizon:latest
        args:
          - control
        ports:
          - name: tls
            containerPort: 443
          - name: monitoring
            containerPort: 17001

        livenessProbe:
          httpGet:
            path: /healthz
            port: monitoring
          initialDelaySeconds: 30
          periodSeconds: 3

        volumeMounts:
          - mountPath: /geoip
            name: geoip
      volumes:
        - name: geoip
          emptyDir: {}
