kubernetes/hub.yml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    app: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "17001"

    spec:
      containers:
      - name: hub
        image: 074735953993.dkr.ecr.us-west-2.amazonaws.com/horizon:latest
        args:
          - hub
        ports:
          - name: hzn
            containerPort: 443
          - name: monitoring
            containerPort: 17001
          - name: http
            containerPort: 80

        livenessProbe:
          httpGet:
            path: /healthz
            port: monitoring
          initialDelaySeconds: 3
          periodSeconds: 3
