kubernetes/control-service.yml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  name: control
spec:
  selector:
    app: control
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
