kubernetes/hub-service.yml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  selector:
    app: hub
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 443
  type: NodePort
